@@ -7,6 +7,24 @@ plugins {
     id("org.openjfx.javafxplugin")
 }
 
+tasks {
+    val fatJar = register<Jar>("fatJar") {
+        setProperty("zip64",true)
+        dependsOn.addAll(listOf("compileJava", "processResources")) // We need this for Gradle optimization to work
+        archiveClassifier.set("genset") // Naming the jar
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+        manifest { attributes(mapOf("Main-Class" to application.mainClass, "")) } // Provided we set it up in the application plugin configuration
+        val sourcesMain = sourceSets.main.get()
+        val contents = configurations.runtimeClasspath.get()
+            .map { if (it.isDirectory) it else zipTree(it) } +
+                sourcesMain.output
+        from(contents)
+    }
+    build {
+        dependsOn(fatJar) // Trigger fat jar creation during build
+    }
+}
+
 protobuf {
     protoc {
         artifact = "com.google.protobuf:protoc:3.21.9"
@@ -86,5 +104,9 @@ dependencies {
 }
 
 application {
-    mainClassName = "org.simmi.distann.DistAnn"
+    mainClass.set("org.simmi.distann.DistAnn")
+    applicationDefaultJvmArgs = listOf("--add-opens=java.base/java.io=ALL-UNNAMED",
+            "--add-opens=java.base/java.nio=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-opens=java.base/sun.security.action=ALL-UNNAMED")
 }
